Fixed height for site-body-wrapper and task-kanban-board on smaller resolutions

--- a/style/menu-bar.css
+++ b/style/menu-bar.css
@@ -8,6 +8,7 @@
     padding: 66px 0;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 4px 0px #00000029;
+    z-index: 10;
 }
 
 .menu-main {
